# opengl_test

./: CMakeLists.txt  main.cpp  student.cpp  student.h  test.cpp
include/include_glad/glad/: gl.h
